# mf4-rs

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  PANDAS_SERIES_REVIEW.md  PYTHON_API_IMPROVEMENTS.md  README.md  WARP.md  WASM_FEASIBILITY.md  pyproject.toml
.github/workflows/: build-wheels.yml  pr-title.yml  release.yml
benchmarks/: README.md
benchmarks/analysis/: INDEX_READING_PERFORMANCE_ANALYSIS.md  PERFORMANCE_COMPARISON.md  README.md
benchmarks/data/: README.md
benchmarks/python/: README.md  index_read_benchmark.py  python_performance_benchmark.py
benchmarks/results/: README.md
benchmarks/rust/: README.md  data_generator.rs  index_reading_benchmark.rs  rust_performance_benchmark.rs
examples/: byte_ranges_example.rs  cut_file.rs  enhanced_index_example.rs  http_range_reader_example.rs  index_operations.rs  large_data.rs  mdf_index_example.rs  merge_files.rs  merge_files_diff.rs  multi_dt_example.rs  multi_groups_with_data.rs  parse_file.rs  python_equivalent.rs  read_file.rs  read_from_url.rs  visualize_layout.rs  write_and_read.rs  write_file.rs  write_multi_groups.rs  write_read_example.rs  write_records.rs
examples/python_equivalent/: const_sigs.rs
examples/wasm-smoke/: Cargo.toml  index.html  worker.js
examples/wasm-smoke/src/: lib.rs
py_comparison/: asam_run.py  const_sigs.py
python/mf4_rs/: __init__.py  __init__.pyi  _mf4_rs.pyi
python_examples/: README.md  enhanced_index_python_example.py  http_range_reading.py  index_mdf.py  index_operations.py  indexing_example.py  pandas_example.py  parse_mdf.py  read_file.py  simple_enhanced_index.py  simple_indexing_examples.py  visualize_layout.py  write_file.py  write_mdf.py
src/: block_layout.rs  cut.rs  error.rs  index.rs  lib.rs  merge.rs  python.rs  signal.rs
src/api/: channel.rs  channel_group.rs  mdf.rs  mod.rs
src/blocks/: channel_block.rs  channel_group_block.rs  common.rs  data_block.rs  data_group_block.rs  data_list_block.rs  header_block.rs  identification_block.rs  metadata_block.rs  mod.rs  signal_data_block.rs  source_block.rs  text_block.rs
src/blocks/conversion/: base.rs  bitfield.rs  formula.rs  linear.rs  logic.rs  mod.rs  simple_test.rs  table_lookup.rs  test_deep_chains.rs  text.rs  types.rs
src/parsing/: decoder.rs  mdf_file.rs  mod.rs  raw_channel.rs  raw_channel_group.rs  raw_data_group.rs  reader_walk.rs  source_info.rs
src/writer/: mdf_writer.rs  mod.rs
src/writer/mdf_writer/: data.rs  init.rs  io.rs  mod.rs  vlsd.rs
tests/: api.rs  bench_index_read.rs  bench_python.py  bench_read.rs  bench_write.rs  bench_write_chunked.rs  bench_write_python.py  block_layout.rs  blocks.rs  cloud_index.rs  cross_compatibility.rs  cut_byte_array.rs  cut_invalidation.rs  cut_metadata_blocks.rs  cut_preserves_metadata.rs  cut_utc.rs  cut_vlsd.rs  cut_vlsd_byte_check.rs  enhanced_index_conversions.rs  index.rs  merge.rs  multi_dg_cut_check.rs  test_asammdf_interop.py  test_cloud_index.py  test_invalidation_bits.rs  vlsd_multi_fragment_offset_read.rs
