[package]
name = "mf4-rs"
version = "1.0.0"
edition = "2025"
description = "mf4-rs is a Rust library for working with ASAM MDF 4 (Measurement Data Format) files."
license = "MIT"
repository = "https://github.com/dmagyar-0/mf4-rs"
readme = "README.md"

[lib]
name = "mf4_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
nom = "8"  # Used for parsing binary MDF data
byteorder = "1.4"  # Helps with reading binary data
memmap2 = "0.9"
meval = "0.2"  # Used for evaluating mathematical expressions
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Python bindings
pyo3 = { version = "0.21", features = ["extension-module"], optional = true }

[features]
default = []
pyo3 = ["dep:pyo3"]
