[package]
name = "mf4-rs"
version = "2.0.0"
edition = "2024"
description = "mf4-rs is a Rust library for working with ASAM MDF 4 (Measurement Data Format) files."
license = "MIT"
repository = "https://github.com/dmagyar-0/mf4-rs"
readme = "README.md"

[lib]
name = "mf4_rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"
required-features = ["pyo3"]

[dependencies]
nom = "8"  # Used for parsing binary MDF data
byteorder = "1.5"  # Helps with reading binary data
memmap2 = "0.9.9"
meval = "0.2"  # Used for evaluating mathematical expressions
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP range-reader (optional). Use native-tls (system OpenSSL on Linux,
# SecureTransport on macOS, SChannel on Windows) to avoid pulling in
# rustls -> ring, whose pre-generated ARMv8 .S files do not cross-compile
# under the manylinux2014 aarch64 toolchain (gcc fails to define __ARM_ARCH).
ureq = { version = "2", default-features = false, features = ["native-tls"], optional = true }

# ureq's native-tls backend is not auto-configured: the connector must be
# built explicitly and handed to the AgentBuilder, so we depend on native-tls
# directly. Vendored so the manylinux aarch64 wheel needs no system libssl.
native-tls = { version = "0.2", features = ["vendored"], optional = true }

# Force openssl to be built from source rather than linked against the
# host system. The manylinux2014 aarch64 cross-toolchain image ships
# /usr/aarch64-unknown-linux-gnu/ but no OpenSSL development headers for
# that sysroot, so dynamic linking fails at build time. Vendoring also
# means the resulting wheel has no runtime libssl dependency.
openssl = { version = "0.10", features = ["vendored"], optional = true }

# Python bindings
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py38"], optional = true }
numpy = { version = "0.21", optional = true }
pyo3-stub-gen = { version = "0.7", optional = true }

[dev-dependencies]
tiny_http = "0.12"
tempfile = "3"

[features]
default = []
http = ["dep:ureq", "dep:openssl", "dep:native-tls"]
pyo3 = ["dep:pyo3", "dep:numpy", "dep:pyo3-stub-gen", "http"]
