[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "mf4-rs"
version = "0.1.0"
description = "Python bindings for mf4-rs - A minimal library for working with ASAM MDF 4 measurement files"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "David", email = "david@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["mdf", "measurement", "data", "automotive", "asam"]
requires-python = ">=3.8"

[project.urls]
homepage = "https://github.com/your-username/mf4-rs"
repository = "https://github.com/your-username/mf4-rs"
documentation = "https://github.com/your-username/mf4-rs"

[tool.maturin]
features = ["pyo3"]