[package]
name = "wasm-smoke"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
mf4-rs = { path = "../.." }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde = { version = "1.0", features = ["derive"] }
js-sys = "0.3"

[profile.release]
opt-level = "z"
lto = true
